--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver=org.postgresql.Driver
-URL=jdbc:postgresql://localhost:5432/First_db
+URL=jdbc:postgresql://localhost:5432/project1_alishev
 username_value=postgres
 password=postgres
